--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PackageActivity"></activity>
+        <activity android:name=".PackageActivity"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
